11-n8n/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`n8n.apps.house.simonellistonball.com`)
      services:
        - name: n8n-web
          port: 5678
  tls:
    secretName: n8n-tls
